--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -22,7 +22,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49053/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49053/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [17/May/2021 15:08:24] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:30] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:36] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:55] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:57] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:24] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:26] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:35] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:38] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:12:25] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:12:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:12:30] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:39] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:39] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:41] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:46] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:51] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:18] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:21] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:53] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:56] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:09] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:11] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:21] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:24] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:26] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
