--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [17/May/2021 15:10:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:38] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:38] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:24] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:27:44] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:27:44] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:18] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:28:53] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
