--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -22,7 +22,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [17/May/2021 15:09:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:09:36] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [17/May/2021 15:09:39] \"\u001b[37mGET /getApp?id=609ac3031c45241ad5cc895d HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:09:55] \"\u001b[37mGET /devApp?id=609ac3031c45241ad5cc895d HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:04] \"\u001b[37mGET /adminApp?id=609ac3031c45241ad5cc895d HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:07] \"\u001b[32mPOST /adminDelete HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:07] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:10:17] \"\u001b[37mGET /adminApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:26:50] \"\u001b[37mGET /adminApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:26:54] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:26:54] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:26:56] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:30:27] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:30:28] \"\u001b[37mGET /getApp?id=6092755aa292472be80d9975 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:30:32] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
