--- a/Explorer/Explorer.ipynb
+++ b/Explorer/Explorer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49055/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49055/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [17/May/2021 15:08:22] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:22] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:23] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:24] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:30] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:34] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:08:55] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:11:35] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:12:25] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:12:28] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:39] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:46] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:19:49] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:09] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:21] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [17/May/2021 15:29:24] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
