--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -23,37 +23,35 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49053/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [17/May/2021 15:08:24] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:30] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:36] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:55] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:08:57] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:11:24] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:11:26] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:11:35] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:11:38] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:12:25] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:12:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:12:30] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:37] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:39] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:39] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:41] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:46] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:19:51] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:28:18] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:28:21] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:28:53] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:28:56] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:29:09] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:29:11] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:29:21] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:29:24] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/May/2021 15:29:26] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [09/Jun/2021 15:01:22] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:01:25] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:01:28] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:01:31] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:01:56] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:01:59] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:17] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:19] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:23] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:23] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:23] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:26] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:29] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:30] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:46] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:48] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:54] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:56] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:02:58] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:03:29] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:03:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:04:34] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:04:36] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:04:41] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:05:10] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:05:12] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:05:21] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Jun/2021 15:05:24] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -196,7 +194,7 @@
     "                    if path[0]==\"%\":#переменные окружения не допускаются\n",
     "                        responseObject[\"result\"][\"success\"]=\"False\"\n",
     "                    else:\n",
-    "                        os.rename(path, newName)#переименование\n",
+    "                        os.rename(path, os.path.split(path)[0]+\"/\"+newName)#переименование\n",
     "                        responseObject[\"result\"][\"success\"]=\"True\"\n",
     "        except Exception:#если операционная система не смогла выполнить команду\n",
     "            responseObject[\"result\"][\"success\"]=\"False\"#маркет неуспешного завершения команды\n",
